Render artifacts; NoAA or 5, 11 Samples viewport render #60820

Closed
opened 2019-01-24 15:18:31 +01:00 by Jeroen Bakker · 3 comments
Member

System Information
Operating system:
Linux

Graphics card:
RX480

Blender Version
Broken:
master 7b35ef23a0

Worked: (optional)

Short description of error

Render artifacts when doing viewport rendering. Happens when Anti Aliasing is turned off, or when Anti Aliasing Samples are set to 5 or 11.

So 1, 5, 11 samples fail and 8 or 16 samples are correct ;-)

image.png

Exact steps for others to reproduce the error

  1. Open Blender
  2. Switch to workbench render engine
  3. Open Film tab
  4. Disable Anti Aliasing or set Antialiasing samples to 5.
  5. View => Viewport Render

Was reproduceable by @fclem

**System Information** Operating system: Linux Graphics card: RX480 **Blender Version** Broken: master 7b35ef23a0468525b17ee45cb474847a431c2f58 Worked: (optional) **Short description of error** Render artifacts when doing viewport rendering. Happens when Anti Aliasing is turned off, or when Anti Aliasing Samples are set to 5 or 11. So 1, 5, 11 samples fail and 8 or 16 samples are correct ;-) ![image.png](https://archive.blender.org/developer/F6390021/image.png) **Exact steps for others to reproduce the error** 1. Open Blender 2. Switch to workbench render engine 3. Open Film tab 4. Disable Anti Aliasing or set Antialiasing samples to 5. 5. View => Viewport Render Was reproduceable by @fclem
Author
Member

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker
Clément Foucault was assigned by Jeroen Bakker 2019-01-24 15:19:20 +01:00
Jeroen Bakker changed title from Render artifacts; NoAA or 5 Samples viewport render to Render artifacts; NoAA or 5, 11 Samples viewport render 2019-01-25 16:55:11 +01:00
Clément Foucault removed their assignment 2019-03-15 18:57:37 +01:00
Jeroen Bakker was assigned by Clément Foucault 2019-03-15 18:57:37 +01:00

This issue was referenced by 84fe4cdcb3

This issue was referenced by 84fe4cdcb37c28469749d673006c8e6083bede7f
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60820
No description provided.